--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
 
 <body background="background.jpg">
 <center>
-  <h1 class="btn btn-warning heading">AI Video Surveillance</h1>
+  <h1 class="btn btn-info heading">AI Video Surveillance</h1>
+  <p class="btn btn-info ">The input name which you will give should match the names present in CoCo model then only it will detect</p>
+  <br>
+  <h5>Object Name:</h5>
+  <input type="text" id="object_name">
   <br>
   <button onclick="start()" class="btn btn-success" id="start">Start</button>
   <br>
-  <h3 id="number_of_objects" class="btn btn-warning"></h3>
-  <br>
-  <h3 id="status" class="btn btn-danger"></h3>
+  <h3 id="number_of_objects" class="btn btn-danger"></h3>
+  <h3 id="status" class="btn btn-warning"></h3>
 </center>
 <div class="copy_right_footer">
   Developed by- Vrishti Singhal
